fix line break in bank account number

--- a/_sass/cevi_zh11/_footer.scss
+++ b/_sass/cevi_zh11/_footer.scss
@@ -151,3 +151,6 @@
   height: 120px;
 }
 
+#footer-spenden-container {
+  white-space: nowrap;
+}
